// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`'delimiter conversion (1) - \`jsxSingle…' > expectation 1`] = `
"<div>
  <div>
    <div class='lorem ipsum dolor sit amet'>
      <slot />
    </div>
  </div>
</div>
"
`;

exports[`'delimiter conversion (2) - \`jsxSingle…' > expectation 1`] = `
"<div>
  <div>
    <div class="lorem ipsum do'or sit amet">
      <slot />
    </div>
  </div>
</div>
"
`;

exports[`'delimiter conversion (3) - \`jsxSingle…' > expectation 1`] = `
"<div>
  <div>
    <div class="lorem ipsum dolor sit amet">
      <slot />
    </div>
  </div>
</div>
"
`;

exports[`'delimiter conversion (4) - \`jsxSingle…' > expectation 1`] = `
"<div>
  <div>
    <div class='lorem ipsum do"or sit amet'>
      <slot />
    </div>
  </div>
</div>
"
`;
